# web-observatory

./: README.md  observatory.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/: observatory.py  web_observatory.py
