[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "web-observatory"
version = "1.2.1"
authors = [
  { name="Eric Nost", email="enost@uoguelph.ca" },
]
description = "Python package for collecting and analyzing webpages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
	"google_api_python_client==2.44.0",
	"items==0.6.5",
	"pandas>=1.3.4",
	"psycopg2==2.8.6",
	"Requests==2.31.0",
	"Scrapy==2.6.1",
	"tldextract==3.2.0",
	"wayback>=0.3.2",
	"pyopenssl==22.0.0",
	"cryptography<38",
	"Twisted==22.10.0"
]

[project.urls]
Homepage = "https://github.com/ericnost/observatory"
Issues = "https://github.com/ericnost/observatory/issues"
